--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,19 +1,26 @@
 .calculator {
     text-align: center;
     margin: 0 auto;
-    padding-top: 200px;
+    padding-top: 2px;
 }
 
+.operator-screen,
 .calculator-screen {
     width: 100%;
     height: 100px;
     background-color: #252525;
     color: #fff;
     text-align: right;
-    font-size: 35px;
+    font-size: 80px;
+    font-weight: bolder;
     border: none;
     padding: 0 20px;
     box-sizing: border-box;
+}
+
+.operator-screen {
+    font-size: 30px;
+    color: rgba(169, 169, 169, 0.932);
 }
 
 .calculator-keys {
